# cmake-unity-build-fails

./: CMakeLists.txt  README.md
src/redefinition_in_cpp/: CMakeLists.txt  bar.cpp  bar.h  foo.cpp  foo.h  main.cpp
src/redefinition_macro/: CMakeLists.txt  bar.cpp  bar.h  foo.cpp  foo.h
src/std_boost_string/: CMakeLists.txt  boost_string_queue.cpp  boost_string_queue.h  main.cpp  std_string_queue.cpp  std_string_queue.h
